package clases_a_utilizar_de_datos;

public class Casilla {
}
