package clases_a_utilizar_de_datos;

import es.uah.matcomp.mp.teoria.gui.mvc.javafx.proyectofinal.ParametrosModeloProperties;
import estructuras_de_datos_implementadas.listaDoblementeEnlazada.ListaDoblementeEnlazada;
import estructuras_de_datos_implementadas.listaSimple.ListaSimple;

public class Tablero {
    private ParametrosModeloProperties model;
    private ListaDoblementeEnlazada<Celda> listaCeldas;
    private ListaSimple<Celda> listaY = new ListaSimple<>();
    private ListaSimple<ListaSimple<Celda>> listaX = new ListaSimple<ListaSimple<Celda>>();
    public Tablero() {}
    public void construir_tablero(int filas, int columnas) {
        for (int i = 0; i < filas; i++) {
            for (int j = 0; j < columnas; j++) {
                Celda celda = new Celda(i, j);
                listaCeldas.add(celda);
                listaY.add(celda);
            }
            listaX.add(listaY);
        }
    }


    public void CargaDatosParametros(ParametrosModeloProperties parametrosModeloProperties) {
        this.model = parametrosModeloProperties;
        model.commit();
    }
}
