@startuml
'https://plantuml.com/class-diagram

class Tablero {
- Integer m
- Integer n
- Casilla inicial

}

class Casilla {
- Casilla anterior
- Casilla siguiente
- Object dato
}
class Basico {

}
class Normal {
}
class Avanzado {
}

class Individuo {
- Integer ID
- Integer Generacion
- Integer Vidas
- String %Reproduccion
- String %Clonacion
- String %Muerte
+ getID(): int
+ setID(int): void
+ getGeneracion():int
+ setGeneracion(int):void
+ getVidas():int
+ setVidas(int):void
+ getRepro():boolean
+ getClonacion():boolean
+ getMuerte():int
}

class Entorno {
- Integer tiempo_aparicion
- Integer Z
- Integer V
+ accion(Individuo):void
}

class Agua {
+ accion(Individuo):void
}
class Comida {
+ accion(Individuo):void
}

class Montaña {
+ accion(Individuo):void
}
class Tesoro {
+ accion(Individuo):void
}
class Biblioteca {
+ accion(Individuo):void
}
class Pozo {
+ accion(Individuo):void
}

Individuo -> Basico
Individuo -> Normal
Individuo -> Avanzado
Entorno -> Agua
Entorno -> Comida
Entorno -> Montaña
Entorno -> Tesoro
Entorno -> Biblioteca
Entorno -> Pozo
Tablero *-- Casilla
Casilla o-- Individuo
Casilla o-- Entorno
@enduml